[tool.poetry]
name = "fog-2022l"
version = "0.1.0"
description = ""
authors = ["Maciej J. Mrowinski <47922372+brokenpumpernickel@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
jupyterlab = "^3.3.3"
ffmpeg = "^1.4"
matplotlib = "^3.5.1"
numpy = "^1.22.3"
sympy = "^1.10.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
